--- a/main.html
+++ b/main.html
@@ -4,12 +4,90 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h2 class="text-center">Internship Form</h2>
+	<form class="row g-3">
+		<div class="col-md-4">
+			<label for="FirstName" class="form-label">First Name</label>
+			<input type="text" class="form-control is-invalid" id="first-name-input"
+				aria-describedby="validationServerFirstNameFeedback" required>
+			<div id="validationServerFirstNameFeedback" class="invalid-feedback">
+				First name required!
+			</div>
+		</div>
+		<div class="col-md-4">
+			<label for="LasttName" class="form-label">Last Name</label>
+			<input type="text" class="form-control is-invalid" id="first-name-input"
+				aria-describedby="validationServerLastNameFeedback" required>
+			<div id="validationServerLastNameFeedback" class="invalid-feedback">
+				Last name required!
+			</div>
+		</div>
+		<div class="col-md-4">
+			<label for="validationServerEmail" class="form-label">Email Address</label>
+			<input type="text" class="form-control is-invalid" id="email-input"
+				aria-describedby="validationServerEmailFeedback" placeholder="xyz@abc.com" required>
+			<div id="validationServerEmailFeedback" class="invalid-feedback">
+				Email required!
+			</div>
+		</div>
+		<div class="col-md-6">
+			<label for="validationServerCollege" class="form-label">College</label>
+			<input type="text" class="form-control is-invalid" id="college-input"
+				aria-describedby="validationServerCollegeFeedback" required>
+			<div id="validationServerCollegeFeedback" class="invalid-feedback">
+				Please provide a valid college.
+			</div>
+		</div>
+		<div class="col-md-3">
+			<label for="validationServerGraduationYear" class="form-label">Graduation Year</label>
+			<select class="form-select is-invalid" id="graduation-year-input" aria-describedby="validationServerGraduationYearFeedback"
+				required>
+				<option selected disabled value="">Choose...</option>
+				<option>2020</option>
+				<option>2021</option>
+				<option>2022</option>
+				<option>2023</option>
+			</select>
+			<div id="validationServerGraduationYearFeedback" class="invalid-feedback">
+				Please select a valid Graduation Year.
+			</div>
+		</div>
+		<div class="col-md-3">
+			<label for="validationServerRollNumber" class="form-label">Roll No.</label>
+			<input type="text" class="form-control is-invalid" id="roll-no-input"
+				aria-describedby="validationServerRollNumberFeedback" required>
+			<div id="validationServerRollNumberFeedback" class="invalid-feedback">
+				Please provide a valid Roll no.
+			</div>
+		</div>
+		<div class="col-12">
+			<div class="form-check">
+				<input class="form-check-input is-invalid" type="checkbox" value="" id="conditions-checkbox"
+					aria-describedby="invalidCheck3Feedback" required>
+				<label class="form-check-label" for="invalidCheck3">
+					Agree to terms and conditions
+				</label>
+				<div id="invalidCheck3Feedback" class="invalid-feedback">
+					You must agree before submitting.
+				</div>
+			</div>
+		</div>
+		<div class="col-12">
+			<button class="btn btn-primary" type="submit">Submit form</button>
+		</div>
+	</form>
+	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+		crossorigin="anonymous"></script>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
