--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<h2 class="text-center">Internship Form</h2>
 	<form class="row g-3">
 		<div class="col-md-4">
-			<label for="FirstName" class="form-label">First Name</label>
+			<label for="first-name-input" class="form-label">First Name</label>
 			<input type="text" class="form-control is-invalid" id="first-name-input"
 				aria-describedby="validationServerFirstNameFeedback" required>
 			<div id="validationServerFirstNameFeedback" class="invalid-feedback">
@@ -21,15 +21,15 @@
 			</div>
 		</div>
 		<div class="col-md-4">
-			<label for="LasttName" class="form-label">Last Name</label>
-			<input type="text" class="form-control is-invalid" id="first-name-input"
+			<label for="last-name-input" class="form-label">Last Name</label>
+			<input type="text" class="form-control is-invalid" id="last-name-input"
 				aria-describedby="validationServerLastNameFeedback" required>
 			<div id="validationServerLastNameFeedback" class="invalid-feedback">
 				Last name required!
 			</div>
 		</div>
 		<div class="col-md-4">
-			<label for="validationServerEmail" class="form-label">Email Address</label>
+			<label for="email-input" class="form-label">Email Address</label>
 			<input type="text" class="form-control is-invalid" id="email-input"
 				aria-describedby="validationServerEmailFeedback" placeholder="xyz@abc.com" required>
 			<div id="validationServerEmailFeedback" class="invalid-feedback">
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 		<div class="col-md-6">
-			<label for="validationServerCollege" class="form-label">College</label>
+			<label for="college-input" class="form-label">College</label>
 			<input type="text" class="form-control is-invalid" id="college-input"
 				aria-describedby="validationServerCollegeFeedback" required>
 			<div id="validationServerCollegeFeedback" class="invalid-feedback">
@@ -45,8 +45,8 @@
 			</div>
 		</div>
 		<div class="col-md-3">
-			<label for="validationServerGraduationYear" class="form-label">Graduation Year</label>
-			<select class="form-select is-invalid" id="graduation-year-input" aria-describedby="validationServerGraduationYearFeedback"
+			<label for="grad-year-select" class="form-label">Graduation Year</label>
+			<select class="form-select is-invalid" id="grad-year-select" aria-describedby="validationServerGraduationYearFeedback"
 				required>
 				<option selected disabled value="">Choose...</option>
 				<option>2020</option>
@@ -59,7 +59,7 @@
 			</div>
 		</div>
 		<div class="col-md-3">
-			<label for="validationServerRollNumber" class="form-label">Roll No.</label>
+			<label for="roll-no-input" class="form-label">Roll No.</label>
 			<input type="text" class="form-control is-invalid" id="roll-no-input"
 				aria-describedby="validationServerRollNumberFeedback" required>
 			<div id="validationServerRollNumberFeedback" class="invalid-feedback">
