--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 		</div>
 		<div class="col-md-4">
 			<label for="email-input" class="form-label">Email Address</label>
-			<input type="text" class="form-control is-invalid" id="email-input"
+			<input type="email" class="form-control is-invalid" id="email-input"
 				aria-describedby="validationServerEmailFeedback" placeholder="xyz@abc.com" required>
 			<div id="validationServerEmailFeedback" class="invalid-feedback">
 				Email required!
@@ -70,7 +70,7 @@
 			<div class="form-check">
 				<input class="form-check-input is-invalid" type="checkbox" value="" id="conditions-checkbox"
 					aria-describedby="invalidCheck3Feedback" required>
-				<label class="form-check-label" for="invalidCheck3">
+				<label class="form-check-label" for="conditions-checkbox">
 					Agree to terms and conditions
 				</label>
 				<div id="invalidCheck3Feedback" class="invalid-feedback">
